# Horace

./: .dup_index.tsv  .gitattributes  .gitignore  Makefile  README.md  idea.md  pyproject.toml  requirements.txt
blogpost/: post.md
configs/: _smoke_grpo.json  gpt2_mlx.json  gpt2_novels.json  gpt2_poems.json  gpt2_shortstories.json  great_authors_v1.txt  grpo_default.json  grpo_default_v01.json  grpo_full_hf_smoke.json  gspo_default.json  llama_mlx.json  qwen_base.json  reward_presets.json  reward_presets_v01.json  rss_feeds_v1.json  url_benchmark_v1.txt
data/: grpo_debug.jsonl  index.json
docs/: benchmark.md  data.md  deploy-externally.md  reward.md  studio.md  writing_taxonomy.md
signatures/: HOWTO.md  cli.py  idea.md  sketch.py
tests/: __init__.py  test_antipattern_originals.py  test_antipattern_pairs.py  test_antipattern_polarity.py  test_baselines.py  test_cadence_profile.py  test_calibrator.py  test_dataset_utils.py  test_epub_extract.py  test_marker_metrics.py  test_meaning_lock.py  test_model_security.py  test_paragraph_cadence.py  test_patch_span_whitespace.py  test_rewrite_rerank.py  test_rss.py  test_score_and_critique.py  test_scorer_model.py  test_span_patcher.py  test_span_patcher_scoring.py  test_spike_patterns.py  test_split_eval_set.py  test_studio_analyze.py  test_studio_site_html.py  test_text_normalize.py  test_url_safety.py  test_windowed_rubric.py  test_write_like.py
tools/: __init__.py  analyze.py  build_gepa_tasks.py  cli.py  compare.py  finalize.py  gen_compare.py  grpo_full_train.py  grpo_runner.py  grpo_train.py  gspo_train.py  ui.py  (+12 more)
(+286 files in other folders)
